Refactor and clean up codebase
Refactor SignListener and related classes for improved readability and functionality

- Removed deprecated methods and unnecessary comments in SignListener.
- Updated logging to use Adventure API for better text formatting.
- Simplified duration formatting and removed unused methods.
- Enhanced error messages to use Adventure API components.
- Added methods in ClaimDataStore to count sell, rent, and mailbox signs for players.
- Improved message handling in Messages class to support Adventure API.
- Refactored SafeTeleportUtil to use EnumSet for material types.
- Added new language entries for sign protection messages in lang.yml.
- Cleaned up imports and added null safety annotations where necessary.
- Extracted EconomyManager, TaxManager, RentalSignManager, SchedulerFacade, and PermissionService from the God-class GPExpansionPlugin
- GPExpansionPlugin reduced from 1415 to 845 lines by delegating to the new manager classes
- EconomyManager handles Vault/Vault2 economy setup, balance, transactions, and formatting
- TaxManager handles tax settings and calculation
- RentalSignManager handles rental sign reset, eviction notices, and duration parsing
- SchedulerFacade provides instance-based Folia/Paper scheduling wrappers
- PermissionService provides Vault-based offline permission checks for snapshot restoration
- Existing public API preserved via delegation methods for full backward compatibility